feat(SM_UserAPP): Implemented a better version
This version is more akin to modern C++. It doesn't exploit to the 100% the possible performance
gains but in a future version it will. Also adapted all the modules for the new, reduced and improved
interface.

--- a/src/Makefile
+++ b/src/Makefile
@@ -115,7 +115,9 @@ OBJS = \
     $O/Messages/SM_FogIO.o \
     $O/Messages/SM_UserAPP.o \
     $O/Messages/SM_UserVM.o \
+    $O/Messages/VMRequest.o \
     $O/OperatingSystem/CpuSchedulers/CpuSchedulerRR/CpuSchedulerRR.o \
+    $O/OperatingSystem/Hypervisors/DcHypervisor/DcHypervisor.o \
     $O/OperatingSystem/Hypervisors/EdgeHypervisor/EdgeHypervisor.o \
     $O/OperatingSystem/Hypervisors/Hypervisor/Hypervisor.o \
     $O/OperatingSystem/Hypervisors/OsCore/OsCore.o \
